# myterm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  com.github.yuvalk.myterm.yml  myterm.desktop  myterm.spec  requirements.md
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  .SRCINFO-git  PKGBUILD  PKGBUILD-git  README.md  update-aur.sh
benches/: terminal_benchmark.rs
debian/: control
src/: config.rs  display.rs  input.rs  lib.rs  main.rs  pty.rs  renderer.rs  shader.wgsl  terminal.rs  wayland.rs
tests/: config_tests.rs  input_tests.rs  terminal_tests.rs
