[package]
name = "myterm"
version = "0.1.0"
edition = "2021"
description = "A modern terminal emulator for Sway and Wayland"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yuvalk/myterm"
keywords = ["terminal", "wayland", "sway", "emulator"]
categories = ["command-line-utilities"]

[dependencies]
# Wayland client libraries
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client", "unstable"] }
wayland-sys = "0.31"

# Graphics and rendering
smithay-client-toolkit = "0.19"
raw-window-handle = "0.6"

# Font rendering
fontconfig = "0.8"
freetype = "0.7"
harfbuzz_rs = "2.0"
unicode-width = "0.2"

# Terminal emulation
vte = "0.13"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utils
crossbeam-channel = "0.5"
nix = { version = "0.29", features = ["process", "signal", "term", "fs", "ioctl"] }
libc = "0.2"
dirs = "5.0"
bitflags = "2.4"

# Color handling
rgb = "0.8"

# Math utilities
cgmath = "0.18"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.0"

[[bench]]
name = "terminal_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = true
opt-level = 0