[package]
name = "myterm"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.11.0"
bytemuck = "1.25.0"
cosmic-text = "0.15.0"
env_logger = "0.11.10"
glyphon = "0.10.0"
log = "0.4.29"
pollster = "0.4.0"
portable-pty = "0.9.0"
raw-window-handle = "0.6.2"
tokio = { version = "1.50.0", features = ["full"] }
vte = "0.15.0"
wgpu = "28"
winit = { version = "0.30.13", features = ["wayland", "x11"] }
